--- a/wp-content/themes/bato-website/scss/_home.scss
+++ b/wp-content/themes/bato-website/scss/_home.scss
@@ -884,6 +884,10 @@ html {
     justify-content: center;
     //margin: 0 -10px;
 
+    @include media-mobile-horizontal {
+      gap: 10px;
+    }
+
     //@include media-mobile {
     //  //margin: 0 -10px;
     //  flex-wrap: nowrap;
